--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -1,13 +1,13 @@
 {
   "version": "0.1.0",
-  "description": "Prepaid Gas Snap - Manage your prepaid gas coupons and enable gasless transactions",
-  "proposedName": "Prepaid Gas Manager",
+  "description": "An example Snap written in TypeScript.",
+  "proposedName": "TypeScript Example",
   "repository": {
     "type": "git",
     "url": "https://github.com/tantodefi/prepaidgas-snap.git"
   },
   "source": {
-    "shasum": "uISLVreRaskE0O05fMecDg061qbtc2VghXFVOH6WoW4=",
+    "shasum": "vOXjP80pOERdhG6FVOMdMHdTXTdyVV/RH0yD/N9WHyg=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -18,12 +18,10 @@
   },
   "initialPermissions": {
     "snap_dialog": {},
-    "snap_manageState": {},
     "endowment:rpc": {
       "dapps": true,
       "snaps": false
-    },
-    "endowment:page-home": {}
+    }
   },
   "platformVersion": "9.3.0",
   "manifestVersion": "0.1"
