Install @metamask/delegation-toolkit and prepare for full 7702 integration

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "@metamask/delegation-toolkit": "^0.13.0",
     "@metamask/providers": "^22.1.0",
     "permissionless": "^0.2.57",
     "react": "^18.2.0",
